--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,7 +20,7 @@
 </article>
   <hr>
   <div class="col-md-12">
-    <%= form_for [@article, @comment ], 
+    <%= form_for [@article, @comment ], remote: true,
     :html => {class: "form-horizontal", role: "form"} do |f| %>
     <% if @comment.errors.any? %>
     <div class="panel panel-danger col-md-offset-1">
@@ -63,6 +63,7 @@
 
   <div class="col-md-10">
     <% if @article.comments.any? %>
+    <div id="messages">
       <% persisted_comments(@comments).each do |comment| %> 
       <div class="comment-body">
         <%= comment.body %> 
@@ -72,8 +73,9 @@
         <%= time_ago_in_words(comment.created_at) %> 
         ago by <%= comment.user.email %>
       </div>
-      <hr>
+      <hr>  
     <% end %>
+  </div>
   <% else %>
 There are no comments to show.
 <% end %> 
